Add schematic and 3d onto the end of their respective CI output file names

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
 
     - name: Generate Schematic
       run: |
-        ${{env.CLI_TOOL}} sch export pdf ${{env.PROJECT_NAME}}/${{env.PROJECT_NAME}}.kicad_sch -o output/${{env.PROJECT_NAME}}_${{env.REVISION}}.pdf
+        ${{env.CLI_TOOL}} sch export pdf ${{env.PROJECT_NAME}}/${{env.PROJECT_NAME}}.kicad_sch -o output/${{env.PROJECT_NAME}}_${{env.REVISION}}_schematic.pdf
 
     - name: Generate BOM
       run: |
@@ -57,7 +57,7 @@ jobs:
 
     - name: Generate STEP
       run: |
-        ${{env.CLI_TOOL}} pcb export step --subst-models ${{env.PROJECT_NAME}}/${{env.PROJECT_NAME}}.kicad_pcb -o output/${{env.PROJECT_NAME}}_${{env.REVISION}}.step
+        ${{env.CLI_TOOL}} pcb export step --subst-models ${{env.PROJECT_NAME}}/${{env.PROJECT_NAME}}.kicad_pcb -o output/${{env.PROJECT_NAME}}_${{env.REVISION}}_3D.step
 
     - name: Generate Gerbers & Drill
       run: |
