Fixing hardcoded project filepath in CI file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Generate Netlist
       run: |
-        ${{env.CLI_TOOL}} sch export netlist --format kicadxml ./breadboard-io/breadboard-io.kicad_sch
+        ${{env.CLI_TOOL}} sch export netlist --format kicadxml ${{env.PROJECT_NAME}}/${{env.PROJECT_NAME}}.kicad_sch
 
     - name: Retrieve project revision
       run: |
